# fincore

./: AUTHORS  Makefile.am  README  README.packaging  THANKS  TODO  config.h.in  configure.ac  fincore.c  fincore.h  fincore.spec.in
